<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/corner_list_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/pileContractItemText"
            android:text="@string/jcjgname" />

        <TextView
            android:id="@+id/tv_project_name"
            style="@style/pileContractItemText"
            android:layout_marginLeft="7dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/pileContractItemText"
            android:text="@string/yearquarter" />

        <TextView
            android:id="@+id/tv_project_time"
            style="@style/pileContractItemText"
            android:layout_marginLeft="7dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/pileContractItemText"
            android:text="@string/expectrank" />

        <TextView
            android:id="@+id/tv_project_rank"
            style="@style/pileContractItemText"
            android:layout_marginLeft="7dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/pileContractItemText"
            android:text="@string/totalcompany" />

        <TextView
            android:id="@+id/tv_project_total"
            style="@style/pileContractItemText"
            android:layout_marginLeft="7dp" />
    </LinearLayout>
</LinearLayout>