<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_submit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_blue_bg"
    tools:context="com.zrdz.diji.home.testmanage.activity.InfoSubmitActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:background="@drawable/corner_list_bg">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/pileNo" />

        <TextView
            android:id="@+id/infosub_text_pileno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView27"
            android:layout_alignBottom="@+id/textView27"
            android:layout_toEndOf="@+id/textView27"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView27"
            android:layout_below="@+id/textView27"
            android:layout_marginTop="15dp"
            android:text="@string/pausetime" />

        <TextView
            android:id="@+id/infosub_text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView29"
            android:layout_alignBottom="@+id/textView29"
            android:layout_toEndOf="@+id/textView29"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/infosub_text_time"
            android:layout_below="@+id/infosub_text_time"
            android:layout_marginTop="15dp"
            android:text="@string/why" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView31"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/textView31"
            android:background="@drawable/corner_list_bg">

            <EditText
                android:id="@+id/infosub_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/whydescribe"
                android:maxEms="60"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll"
            android:orientation="horizontal">

            <Button
                android:id="@+id/infosub_btn_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/infosub_btn_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:text="@string/cacel"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>