<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/pileContractItemText"
            android:text="@string/company" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/pileContractItemText"
            android:layout_marginLeft="7dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/pileContractItemText"
            android:text="@string/totalscore" />

        <TextView
            android:id="@+id/tv_totalscore"
            style="@style/pileContractItemText"
            android:layout_marginLeft="7dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/pileContractItemText"
            android:text="@string/rank" />

        <TextView
            android:id="@+id/tv_rank"
            style="@style/pileContractItemText"
            android:layout_marginLeft="7dp" />

    </LinearLayout>


</LinearLayout>